# Variorus_Sorts

./: Variorus_Sorts.sln
Variorus_Sorts/: Variorus_Sorts.cpp  Variorus_Sorts.vcxproj  Variorus_Sorts.vcxproj.filters
template/: .gitignore  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  sortdemo.c
template/src/: Makefile  Makefile.am  Makefile.in  bubble_sort.c  bubble_sort.h  quick_sort.c  quick_sort.h  shaker_sort.c  shaker_sort.h  sortdemo.c  utils.c  utils.h
