#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([sortdemo], [1.0.0], [sliseringr@yandex.ru])
AM_INIT_AUTOMAKE(sortdemo, 1.0.0)
AC_CONFIG_SRCDIR([src/sortdemo.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
