# what flags you want to pass to the C compiler & linker
# CFLAGS = --pedantic -Wall -std=c99 -O2
# LDFLAGS =
# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = sortdemo
sortdemo_SOURCES = bubble_sort.c sortdemo.c utils.c quick_sort.c shaker_sort.c
